--- a/keycloak/deployment.yaml
+++ b/keycloak/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: keycloak
           image: quay.io/keycloak/keycloak:24.0.5
-          args: ["start-dev"]
+          # args: ["start-dev"]
           env:
             - name: KEYCLOAK_ADMIN
               value: "admin"
