--- a/keycloak/application.yaml
+++ b/keycloak/application.yaml
@@ -13,7 +13,7 @@ spec:
       values:  |
         postgresql:
           auth:
-            password: mysecurepassword
+            password: mypwd
   destination:
     server: https://kubernetes.default.svc
     namespace: keycloak
