--- a/keycloak/deployment.yaml
+++ b/keycloak/deployment.yaml
@@ -16,12 +16,12 @@ spec:
     spec:
       containers:
         - name: keycloak
-          image: quay.io/keycloak/keycloak:24.0.5
-          # args: ["start-dev"]
+          image: quay.io/keycloak/keycloak:latest
+          args: ["start-dev"]
           env:
-            - name: KEYCLOAK_ADMIN
+            - name: KC_BOOTSTRAP_ADMIN_USERNAME
               value: "admin"
-            - name: KEYCLOAK_ADMIN_PASSWORD
+            - name: KC_BOOTSTRAP_ADMIN_PASSWORD
               value: "admin"
             - name: KC_PROXY
               value: "edge"
