--- a/operator/application.yaml
+++ b/operator/application.yaml
@@ -2,7 +2,7 @@ kind: Application
 apiVersion: argoproj.io/v1alpha1
 metadata:
    name: keycloak-operator
-   # namespace: argocd
+   namespace: argocd
 
 spec:
   project: default
@@ -13,10 +13,9 @@ spec:
     helm:
       valueFiles:
         - values.yaml
-
   destination:
     server: https://kubernetes.default.svc
-    # namespace: keycloak
+    namespace: keycloak
   syncPolicy:
     automated:
       prune: true
