--- a/keycloak/route.yaml
+++ b/keycloak/route.yaml
@@ -3,7 +3,8 @@ apiVersion: route.openshift.io/v1
 metadata:
   name: keycloak
 spec:
-  host: keycloak.apps.crc.testing
+#  host: keycloak.apps-crc.testing
+  subdomain: keycloak
   port:
     targetPort: http
   to:
