--- a/operator/application.yaml
+++ b/operator/application.yaml
@@ -15,7 +15,7 @@ spec:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: keycloak
+    namespace: keycloak-operator
   syncPolicy:
     automated:
       prune: true
